--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>LoDeJaz</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARC-UlxVgQ5k6nJ7NQxwp6Cbqj91ZIYJM"></script>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/fav-icon.ico">
