--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2FCBYZFG29"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2FCBYZFG29');
+</script>
   <meta charset="utf-8">
   <title>LoDeJaz</title>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARC-UlxVgQ5k6nJ7NQxwp6Cbqj91ZIYJM"></script>
