--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,76 @@
   gtag('config', 'G-2FCBYZFG29');
 </script>
   <meta charset="utf-8">
-  <title>LoDeJaz</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARC-UlxVgQ5k6nJ7NQxwp6Cbqj91ZIYJM"></script>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lo de Jaz cabañas - Reserva en La Caleta</title>
+  <meta name="description" content="Alquiler de cabañas en La Caleta con increíbles vistas a la playa y rodeadas de naturaleza. Cabañas para parejas y familias con todas las comodidades. Reserva hoy tu estancia.">
+  <meta name="keywords" content="alquiler de cabañas,
+    alquiler de cabañas en La Caleta,
+    cabañas en La Caleta,
+    vacaciones en La Caleta,
+    alojamiento en La Caleta,
+    cabañas con vista al mar en La Caleta,
+    cabañas familiares en La Caleta,
+    escapadas a La Caleta,
+    cabañas para parejas en La Caleta,
+    turismo en La Caleta,
+    cabañas cerca de la playa en La Caleta,
+    cabañas de lujo en La Caleta,
+    cabañas económicas en La Caleta,
+    cabañas con piscina en La Caleta,
+    cabañas para grupos en La Caleta,
+    actividades en La Caleta,
+    alquiler de cabañas en La Caleta Argentina,
+    mejores cabañas en La Caleta,
+    cabañas en La Caleta con wifi,
+    cabañas rústicas en La Caleta,
+    cabañas con parrilla en La Caleta,
+    cabañas pet-friendly en La Caleta,
+    cabañas en La Caleta con cocina,
+    cabañas económicas en La Caleta,
+    escapadas de fin de semana en La Caleta,
+    cabañas con actividades al aire libre en La Caleta,
+    cabañas en La Caleta para grupos grandes,
+    cabañas cerca de La Caleta,
+    alquiler de cabañas con vistas panorámicas,
+    cabañas rústicas y acogedoras en La Caleta,
+    alquiler de cabañas con senderismo en La Caleta,
+    cabañas en La Caleta para familias numerosas,
+    ofertas de cabañas en La Caleta,
+    cabañas en La Caleta con fogón,
+    cabañas en La Caleta para vacaciones de verano,
+    cabañas en La Caleta con jacuzzi,
+    cabañas en La Caleta para desconectar,
+    cabañas cerca del mar en La Caleta,
+    alquiler de cabañas con actividades acuáticas,
+    cabañas con chimenea en La Caleta,
+    cabañas en La Caleta para celebraciones
+  ">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Jazmin Briasco">
+  <meta name="publisher" content="Jazmin Briasco">
+  
+  <meta property="og:title" content="Alquiler de Cabañas en La Caleta" />
+  <meta property="og:description" content="Reserva las mejores cabañas en La Caleta con vistas al mar y todas las comodidades." />
+  <!--CAMBIAR-->
+  <meta property="og:image" content="https://lacaleta.netlify.app/assets/playa.jpg" />
+  <!--CAMBIAR-->
+  <meta property="og:url" content="https://lacaleta.netlify.app" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="es_AR" />
+  <meta property="og:site_name" content="Cabañas en La Caleta" />
+  
+  <link rel="canonical" href="https://lacaleta.netlify.app/" />
+  <link rel="image_src" href="https://lacaleta.netlify.app/assets/playa.jpg"/> 
   <link rel="icon" type="image/x-icon" href="./assets/fav-icon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playwrite+NZ:wght@100..400&display=swap" rel="stylesheet">
+
+  <base href="/">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARC-UlxVgQ5k6nJ7NQxwp6Cbqj91ZIYJM"></script>
 </head>
 <body>
   <app-root></app-root>
